--- a/tr.html
+++ b/tr.html
@@ -41,18 +41,18 @@ http://www.tooplate.com/view/2087-kalay
      <div class="container">
           <div class="row">
 <li class="dropdown language-selector">
-  Language:  
+  Dil:  
   <a href="#" class="dropdown-toggle" data-toggle="dropdown" data-close-others="true">
-    <img src="images/flag-uk.png" />
+    <img src="images/flag-tr.png" />
   </a>
   <ul class="dropdown-menu pull-right">
-    <li>
+    <li class="active">
       <a href="tr.html">
         <img src="images/flag-tr.png" />
         <span>Türkçe</span>
       </a>
     </li>
-    <li class="active">
+    <li>
       <a href="index.html">
         <img src="images/flag-uk.png" />
         <span>English</span>
@@ -63,9 +63,10 @@ http://www.tooplate.com/view/2087-kalay
 </li>
                <div class="col-md-offset-5 col-md-7 col-sm-12">
                     <div class="home-thumb">
-                         <h1 class="wow fadeInUp" data-wow-delay="0.4s">Hello, I am KEMAL ÇAKIROĞLU.</h1>
-                         <p class="wow fadeInUp white-color" data-wow-delay="0.6s">I write articles, product descriptions, texts for advertising and letters.</p>
-                         <a href="#service" class="wow fadeInUp smoothScroll btn btn-default section-btn" data-wow-delay="1s">discover more</a>
+                         <h1 class="wow fadeInUp" data-wow-delay="0.4s">Merhaba, benim adım Kemal Çakıroğlu.</h1>
+                         <p class="wow fadeInUp white-color" data-wow-delay="0.6s">
+Makaleler, ürün açıklamaları, reklam metinleri ve mektuplar yazıyorum.</p>
+                         <a href="#service" class="wow fadeInUp smoothScroll btn btn-default section-btn" data-wow-delay="1s">keşfet</a>
                     </div>
                </div>
 
@@ -81,23 +82,23 @@ http://www.tooplate.com/view/2087-kalay
 
                <div class="wow fadeInUp section-title" data-wow-delay="0.2s">
                     <!-- SECTION TITLE -->
-                    <h2>what things i am doing...</h2>
+                    <h2>Neler yapıyorum...</h2>
                     <p> </p>
                </div>
 
                <div class="col-md-3 col-sm-6 wow fadeInUp" data-wow-delay="0.4s">
                     <div class="service-thumb">
                          <i class="fa fa-smile-o"></i>
-                         <h4>Graphic Design</h4>
-                         <p>Design of sites, booklets, mailings, any printed production, and banners.</p>
+                         <h4>Grafik Tasarımı</h4>
+                         <p>Sitelerin, kitapçıkların, postalamaların, herhangi bir basılı üretimin ve afişlerin tasarımı.</p>
                     </div>
                </div>
 
                <div class="col-md-3 col-sm-6 wow fadeInUp" data-wow-delay="0.4s">
                     <div class="service-thumb bg-grey">
                          <i class="fa fa-globe"></i>
-                         <h4 class="white-color">Website Development</h4>
-                         <p>Examples of works are available in the portfolio. I will make a modern responding site.</p>
+                         <h4 class="white-color">Website Geliştirme</h4>
+                         <p>Çalışma örnekleri portföyde mevcuttur. Modern bir cevap sitesi yapacağım.</p>
                     </div>
                </div>
 
@@ -105,7 +106,8 @@ http://www.tooplate.com/view/2087-kalay
                     <div class="service-thumb">
                          <i class="fa fa-lightbulb-o"></i>
                          <h4>UI/UX design</h4>
-                         <p>Design of sites, booklets, mailings, any printed production, and banners.</p>
+                         <p>
+Sitelerin, kitapçıkların, postalamaların, herhangi bir basılı üretimin ve afişlerin tasarımı.</p>
                     </div>
                </div>
 
@@ -113,7 +115,7 @@ http://www.tooplate.com/view/2087-kalay
                     <div class="service-thumb">
                          <i class="fa fa-clone"></i>
                          <h4>illustration</h4>
-                         <p>I'll draw cute illustrations for your project. My favorite techniques are graphics and watercolor.</p>
+                         <p>Projeniz için sevimli resimler çizeceğim. En sevdiğim teknikler grafik ve suluboya.</p>
                     </div>
                </div>
                
@@ -143,12 +145,14 @@ http://www.tooplate.com/view/2087-kalay
                     <div class="about-thumb">
                          <!-- SECTION TITLE -->
                          <div class="wow fadeInUp section-title" data-wow-delay="0.6s">
-                              <h2>a little more about Kemal</h2>
-                              <p>Graphic Designer, Creative Photographer & Front-end Developer</p>
+                              <h2>Hakkımda</h2>
+                              <p>
+Grafik Tasarımcı, Yaratıcı Fotoğrafçı ve Cephe Geliştiricisi</p>
                          </div>
                          <div class="wow fadeInUp" data-wow-delay="0.8s">
-                              <p>I write articles, product descriptions, texts for advertising and
-letters.</p>
+                              <p>
+Makaleler, ürün açıklamaları, reklam metinleri ve
+metinler.</p>
                               <p> </p>
                          </div>
                     </div>
@@ -167,7 +171,7 @@ letters.</p>
                <div class="col-md-12 col-sm-12">
                     <!-- SECTION TITLE -->
                     <div class="wow fadeInUp section-title" data-wow-delay="0.2s">
-                         <h2>Seleted Designs</h2>
+                         <h2>Tasarımlarım</h2>
                          <p> </p>
                     </div>
                </div>
@@ -178,7 +182,7 @@ letters.</p>
                          <a href="images/work-image1.jpg" class="image-popup">
                               <div class="work-thumb-overlay">
                                    <h4 class="white-color"> </h4>
-                                   <h2>Graphic Design</h2>
+                                   <h2>Grafik Tasarımı</h2>
                               </div>
                               <img src="images/work-image1.jpg" class="img-responsive" alt="Work 1">
                          </a>
@@ -191,7 +195,7 @@ letters.</p>
                          <a href="images/work-image2.jpg" class="image-popup">
                               <div class="work-thumb-overlay">
                                    <h4 class="white-color"> </h4>
-                                   <h2>Photography</h2>
+                                   <h2>Fotoğrafçılık</h2>
                               </div>
                               <img src="images/work-image2.jpg" class="img-responsive" alt="Work 2">
                          </a>
@@ -224,8 +228,8 @@ letters.</p>
                <div class="col-md-12 col-sm-12">
                     <!-- SECTION TITLE -->
                     <div class="wow fadeInUp section-title" data-wow-delay="0.2s">
-                         <h2>Get in touch</h2>
-                         <p>We'll answer soon</p>
+                         <h2>İletişim</h2>
+                         <p>En yakın zamanda cevaplayacağım</p>
                     </div>
                </div>
 
@@ -243,7 +247,7 @@ letters.</p>
                                    <textarea class="form-control" rows="5" name="message" placeholder="Message" required=""></textarea>
                               </div>
                               <div class="col-md-offset-8 col-md-4 col-sm-offset-6 col-sm-6">
-                                   <button id="submit" type="submit" class="form-control" name="submit">Send Message</button>
+                                   <button id="submit" type="submit" class="form-control" name="submit">Gönder</button>
                               </div>
                         </form>
                     </div>
@@ -253,14 +257,14 @@ letters.</p>
                     <!-- CONTACT INFO -->
                     <div class="wow fadeInUp contact-info" data-wow-delay="0.4s">
                          <div class="section-title">
-                              <h2>Contact Info</h2>
+                              <h2>İletişim</h2>
                               <p> </p>
                          </div>
                          
                          <p><i class="fa fa-map-marker"></i>TURKEY\
 ISTANBUL</p>
                          <p><i class="fa fa-comment"></i> <a href="mailto:akemalcakiroglu@gmail.com">akemalcakiroglu@gmail.com</a></p>
-                         <p><i class="fa fa-phone"></i> +90-534-409-7881</p>
+                         <p><i class="fa fa-tel"></i> +90-534-409-7881</p>
                     </div>
                </div>
 
